<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView
                android:id="@+id/min_salary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_salary_text"
                android:layout_gravity="center_horizontal"
                />

        <SeekBar
                android:id="@+id/min_salary_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/SeekBarGapsStyle"
                android:max="50000"
                />

        <TextView
                android:id="@+id/max_salary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_salary_text"
                android:layout_gravity="center_horizontal"
                />

        <SeekBar
                android:id="@+id/max_salary_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/SeekBarGapsStyle"
                android:max="50000"
                />

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/division_label"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/division_label"
                    android:layout_alignTop="@+id/division_spinner"
                    android:layout_alignBottom="@+id/division_spinner"
                    android:gravity="center"
                    style="@style/LeftRightStandardMargins"
                    />

            <Spinner
                    android:id="@id/division_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/division_label"
                    android:layout_marginRight="16dp"
                    />

            <TextView
                    android:id="@+id/employment_year_label"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/employment_year_label"
                    android:layout_alignTop="@+id/employment_year_spinner"
                    android:layout_alignBottom="@+id/employment_year_spinner"
                    android:gravity="center"
                    style="@style/LeftRightStandardMargins"
                    />

            <Spinner
                    android:id="@+id/employment_year_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/division_spinner"
                    android:layout_toRightOf="@id/employment_year_label"
                    android:layout_marginRight="16dp"
                    />
        </RelativeLayout>

        <include layout="@layout/divider"/>

        <EditText
                android:id="@+id/company_name_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_name_hint"
                android:layout_gravity="center_horizontal"
                style="@style/LeftRightStandardMargins"
                />

        <include layout="@layout/divider"/>

        <EditText
                android:id="@+id/employee_name_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/employee_name_hint"
                style="@style/LeftRightStandardMargins"
                />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <Button android:id="@+id/search_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_button_label"
                    />
            <Button android:id="@+id/reset_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset_button_label"
                    />
            <Button android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_button_label"
                    />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

